--- a/_sidebar.html
+++ b/_sidebar.html
@@ -10,16 +10,15 @@
 		<span class="material-icons" style="font-size:24px">list</span>  Browse List
 	</a>
 
-	<?php 
-		$authorized = $_SESSION['authorized'];
-
-		if($authorized === "TRUE") {
-			echo '<a id="tabnav_3" href="#" class="w3-bar-item w3-button">
-			<span class="material-icons" style="font-size:24px">message</span>  Create Post</a>';
-		}
-	?>
+	<a id="tabnav_3" href="#" class="w3-bar-item w3-button">
+		<span class="material-icons" style="font-size:24px">message</span>  Create Post
+	</a>
+	
 	<a id="tabnav_4" href="#" class="w3-bar-item w3-button">
 		<span class="material-icons" style="font-size:24px">info_outline</span>  About
 	</a>
 	
 </div>
+
+
+
